--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,37 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="/css/pico.css">
-    <link href="css/styles.css" rel="stylesheet">
-</head>
-
-<body>
-
+<%- include("header") %>
     <div class="flex">
 
         <div class="flex-box">
-            <% if(kindOfDay=="Saturday" || kindOfDay==="Sunday" ){ %>
-                <h1 style="color: green;">Its <%= kindOfDay %>! </h1>
-                <% }else{ %>
-                    <h1 style="color: red;">Its <%= kindOfDay %>!</h1>
-                    <%}%>
+            <h1><%= listTitle %></h1>
                         <div class="container">
 
 
 
                             <% for (var i=0; i < newListItem.length ; i++){%>
                                 <div class="item">
-                                    <input class="btn" type="checkbox">
-                                    <p class="btn">
+                                    <input class="check field-break" type="checkbox">
+                                    <p class="text">
                                         <%= newListItem[i] %>
                                     </p>
                                 </div>
@@ -39,19 +20,16 @@
                                 <% } %>
 
 
-                                    <form class="btn" action="" method="POST">
+                                    <form class="btn" action="/" method="POST">
                                         <input type="text" name="newItem" autocomplete="off">
-                                        <button class="secondary" type="submit">add list item</button>
+                                        <button class="secondary" type="submit" name="list" value=<%=listTitle%>>+</button>
                                     </form>
                                     <form class="btn" action="delete" method="Post">
-                                        <button class="btn" type="submit">delete</button>
+                                        <button class="btn" type="submit" name="list" value=<%=listTitle%>>delete</button>
                                     </form>
 
                         </div>
         </div>
     </div>
 
-
-</body>
-
-</html>
+<%- include("footer") %>
