--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,10 @@
+html{
+    background-color: aliceblue;
+    background-image: -webkit-linear-gradient(65deg, purple 50%, aliceblue 50%);
+    font-family: Helvetica, sans-serif;  
+}
+
+
 body{
     height: 100vh;
     
@@ -10,40 +17,53 @@ h1{
     font-size: 1.8rem;
     text-align: center;
     margin-top: 4rem;
-    background-color: rgb(126, 128, 228);
     height: 3rem;
     
     
 }
+p{
+  font-family: Helvetica, sans-serif;  
+}
+
 
 .flex{
-    width: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 
 }
-
-
-
+.field-br {
+    word-break: break-all; 
+  }
 .flex-box{
-    margin-top: 10rem;
-    background-color: bisque;
+    background-color: dodgerblue;
     border-radius: 10px;
-    text-align: center;
-    gap: 20px;
+    padding: 50px;
+    width: 400px;
+}
+input:checked+p{
+    text-decoration: line-through;
+    text-decoration-color: plum;
+
+}
+
+.item{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.container{
+    margin-top: 50px;
+}
+
+.check{
+    display: inline-block;
+    
 }
 
 
-input{
-    text-overflow: ellipsis;
-}
-.btn{
+.text{
     display: inline;
-}
-button{
-    margin: 0;
-    display: inline;
-    --primary: pink;
-    width: 25%;
+    
 }
